# dogfood-ci-prototype

./: Cargo.toml  README.adoc
dogfood-ci/: Cargo.toml
dogfood-ci/src/: main.rs
oxide-client/: Cargo.toml
oxide-client/src/: lib.rs
