[workspace]
members = [
    "dogfood-ci",
    "oxide-client",
]

default-members = [
    "dogfood-ci",
    "oxide-client",
]

[workspace.dependencies]
base64 = "0.21.0"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", branch = "main" }
rand = "0.8.5"
regress = "0.4.1"
reqwest = { version = "0.11", features = [ "json", "rustls-tls", "stream" ] }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = "1.0.91"
tokio = { version = "1.24", features = [ "net" ] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
