[package]
name = "oxide-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
base64.workspace = true
chrono.workspace = true
futures.workspace = true
progenitor.workspace = true
rand.workspace = true
regress.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
